corrections on year and number

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                     <h3>Educational Background</h3>
                     <ul>
-                        <li><strong>B.A. (Hons) Islamic Studies:</strong> University of Ilorin (1987), graduating as the best student in his department</li>
+                        <li><strong>B.A. (Hons) Islamic Studies:</strong> University of Ilorin (1987), graduated as one of outstanding student in his department</li>
                         <li><strong>M.A. & Ph.D. Islamic Studies:</strong> University of Ilorin (2005)</li>
                         <li><strong>Master of Public Administration (MPA):</strong> University of Ilorin (1995)</li>
                         <li><strong>PGDE:</strong> University of Ilorin (2000)</li>
@@ -98,11 +98,12 @@
                     <div class="icon">
                         <i class="fas fa-star"></i>
                     </div>
-                    <h3>Professional Fellowships</h3>
+                    <h3>Professional Fellowships & Memberships</h3>
                     <ul>
                         <li>Fellow, Chartered Institute of Personnel Management of Nigeria (CIPMN) since 2016</li>
                         <li>Fellow, Chartered Public Administrators of England and Wales (2006)</li>
-                        <li>Member of several academic and professional associations</li>
+                        <li>Member, Nigerian Association of Teachers of Arabic and Islamic Studies (NATAIS)</li>
+                        <li>Member of several other academic and professional associations</li>
                     </ul>
                 </div>
                 <div class="summary-card fade-in delay-1">
@@ -144,12 +145,11 @@
                     <div class="timeline-year">1987</div>
                     <div class="timeline-content">
                         <h3>B.A. (Hons) Islamic Studies</h3>
-                        <p>University of Ilorin, graduating as the best student in his department</p>
-                        <p><em>Awarded First Class Honors</em></p>
+                        <p>University of Ilorin, graduating with a Second Class Upper Division and recognized as one of the best students in his department</p>
                     </div>
                 </div>
                 <div class="timeline-item fade-in delay-1">
-                    <div class="timeline-year">1989</div>
+                    <div class="timeline-year">1990</div>
                     <div class="timeline-content">
                         <h3>M.A. Islamic Studies</h3>
                         <p>University of Ilorin</p>
@@ -513,7 +513,7 @@
                         <li><i class="fas fa-map-marker-alt"></i> Al-Hikmah University, Ilorin, Nigeria</li>
                         <li><i class="fas fa-calendar-alt"></i> Appointed Vice-Chancellor: July 2025</li>
                         <li><i class="fas fa-user-graduate"></i> Professor of Islamic Studies (2018)</li>
-                        <li><i class="fas fa-phone"></i> +234 XXX XXX XXXX</li>
+                        <li><i class="fas fa-phone"></i> +234 805 640 6874 | +234 803 705 3812</li>
                         <li><i class="fas fa-envelope"></i> vc@alhikmah.edu.ng</li>
                     </ul>
                     <div class="social-links">
@@ -535,14 +535,12 @@
                     </ul>
                 </div>
                 <div class="footer-section fade-in delay-2">
-                    <h3>Administrative Roles</h3>
+                    <h3>Professional Memberships</h3>
                     <ul>
-                        <li>Vice-Chancellor (Current)</li>
-                        <li>Deputy Vice-Chancellor</li>
-                        <li>Registrar</li>
-                        <li>Dean, Faculty of Humanities & Social Sciences</li>
-                        <li>Director of Academic Planning</li>
-                        <li>Head of Islamic Studies Department</li>
+                        <li>Nigerian Association of Teachers of Arabic and Islamic Studies (NATAIS)</li>
+                        <li>Fellow, Chartered Institute of Personnel Management of Nigeria (CIPMN)</li>
+                        <li>Fellow, Chartered Public Administrators of England and Wales</li>
+                        <li>Member of several other academic and professional associations</li>
                     </ul>
                 </div>
                 <div class="footer-section fade-in delay-3">
@@ -560,7 +558,7 @@
             </div>
             <div class="copyright">
                 <p>&copy; 2026 Professor Lateef Folorunsho Oladimeji. All rights reserved.</p>
-                <p>Portfolio Website - Mobile First Responsive Design | Designed for Academic Excellence</p>
+                <!--<p>Portfolio Website - Mobile First Responsive Design | Designed for Academic Excellence</p>-->
             </div>
         </div>
     </footer>
@@ -569,6 +567,6 @@
     <a href="#home" class="back-to-top" id="backToTop">
         <i class="fas fa-arrow-up"></i>
     </a>
-    <script scr="index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
